Clean up EntityFetchOptions.java and add its first direct test coverage
- Mark the four instance fields final; each is assigned exactly once,
  in the constructor.
- Fix Javadoc grammar ("need prepended" -> "need to be prepended").
- Use pattern-matching instanceof in isForeignKeyInChild() and the
  single-selection branch of handleField(), replacing the redundant
  cast.
- Use List#getFirst() instead of get(0) (SequencedCollection, JDK 21).
- Tighten the raw Map<String, Map> return/local types on the
  getFetchArgument() overloads to Map<String, Map<String, String>>,
  matching the actual join-map shape they build.

EntityFetchOptions is documented public API (grails-data-graphql docs
point users at it directly for custom data fetchers) but had zero
direct test coverage - only indirect coverage through
DefaultGormDataFetcherSpec. Added EntityFetchOptionsSpec covering
construction (including the null-entity guard), getAssociations(),
getFetchArgument()'s map shape, and isForeignKeyInChild() for
ToMany/hasOne/plain-toOne associations.

Left the single-arg EntityFetchOptions(PersistentEntity) constructor
in place despite it having no internal callers - it's the constructor
external consumers are documented to use directly.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>