@@ -47,10 +47,10 @@ import org.grails.datastore.mapping.model.types.ToOne;
  */
 public class EntityFetchOptions {
 
-    private Map<String, Association> associations = new LinkedHashMap<>();
-    protected PersistentEntity entity;
-    protected Set<String> associationNames;
-    protected String propertyName;
+    private final Map<String, Association> associations = new LinkedHashMap<>();
+    protected final PersistentEntity entity;
+    protected final Set<String> associationNames;
+    protected final String propertyName;
 
     private static final String JOIN = "join";
     private static final String FETCH = "fetch";
@@ -69,7 +69,7 @@ public class EntityFetchOptions {
 
     /**
      * Designed for use when a projection query is used. The fetch arguments
-     * need prepended with the projection property name.
+     * need to be prepended with the projection property name.
      *
      * @param entity The {@link PersistentEntity} being queried
      * @param projectionName The name of the property being projected
@@ -97,7 +97,7 @@ public class EntityFetchOptions {
     }
 
     protected boolean isForeignKeyInChild(Association association) {
-        return association instanceof ToOne && ((ToOne) association).isForeignKeyInChild() || association instanceof ToMany;
+        return association instanceof ToOne toOne && toOne.isForeignKeyInChild() || association instanceof ToMany;
     }
 
     protected void handleField(String parentName, Field selectedField, Set<String> joinProperties) {
@@ -125,8 +125,7 @@ public class EntityFetchOptions {
             if (isForeignKeyInChild(association)) {
                 joinProperties.add(resolvedName);
             }
-            else if (selections.size() == 1 && selections.get(0) instanceof Field) {
-                Field field = (Field) selections.get(0);
+            else if (selections.size() == 1 && selections.getFirst() instanceof Field field) {
                 if (!entity.isIdentityName(field.getName())) {
                     joinProperties.add(resolvedName);
                 }
@@ -232,11 +231,11 @@ public class EntityFetchOptions {
      * @param properties The properties to fetch
      * @return The fetch argument
      */
-    public Map<String, Map> getFetchArgument(Set<String> properties) {
+    public Map<String, Map<String, String>> getFetchArgument(Set<String> properties) {
         if (properties.isEmpty()) {
             return new LinkedHashMap<>();
         }
-        Map<String, Map> arguments = new LinkedHashMap<>(1);
+        Map<String, Map<String, String>> arguments = new LinkedHashMap<>(1);
         Map<String, String> joins = new LinkedHashMap<>(properties.size());
 
         for (String prop: properties) {
@@ -246,7 +245,7 @@ public class EntityFetchOptions {
         return arguments;
     }
 
-    public Map<String, Map> getFetchArgument(DataFetchingEnvironment environment) {
+    public Map<String, Map<String, String>> getFetchArgument(DataFetchingEnvironment environment) {
         return getFetchArgument(environment, false);
     }
 
@@ -260,7 +259,7 @@ public class EntityFetchOptions {
      * @param skipCollections Whether to exclude associations that are collections
      * @return The fetch argument
      */
-    public Map<String, Map> getFetchArgument(DataFetchingEnvironment environment, boolean skipCollections) {
+    public Map<String, Map<String, String>> getFetchArgument(DataFetchingEnvironment environment, boolean skipCollections) {
         return getFetchArgument(getJoinProperties(environment, skipCollections));
     }
 }
